[package]
name = "bellovin_merritt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.4", features = ["std"] }
aes-gcm-siv = "0.10"
argon2 = { version = "0.4", features = ["std"] }
bincode = "1.3"
env_logger = "0.9"
lazy_static = "1.4"
log = "0.4"
password-hash = "0.4"
rand = "0.8"
rsa = { version = "0.6", features = ["serde"] }
sha3 = "0.10"
